--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -919,7 +919,7 @@ a.badge:focus {
 }
 .label-info,
 .badge-info {
-  background-color: #3a87ad;
+  background-color: #000000;
 }
 .label-info[href],
 .badge-info[href] {
