--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*#487448*/
 a { font-family: 'Noto Sans', sans-serif; }
 a:hover { text-decoration: none; }
 .no-bg { background: none; background-image: none; }
