--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ h2.title { color: #fff; }
 #header {
 	width: 100%;
 	height: 70px;
-	background: #333333;
+	background: #000;
 }
 #header .logo {
 	height: 70px;
@@ -40,13 +40,13 @@ h2.title { color: #fff; }
 	width: 30px;
 	line-height: 70px;
 	/*color: 	#A3D900;*/
-        color: #9BC960;
+        color: #B8C3A8;
 	font-size: 25px;
 	margin-right: 10px;
 }
 #header .contact:hover {
 	/*background: #A3D900;*/
-        background: #9BC960;
+        background: #B8C3A8;
 	color: #333;	
 }
 #header .contact:hover > span { color: #333; }
@@ -98,7 +98,7 @@ h2.title { color: #fff; }
 }
 #programacao-table tbody tr td.hour > div {
 	/*color: #A3D900;*/
-        color: #9BC960;
+        color: #B8C3A8;
 	font-weight: 700;	
 }
 #programacao-table tbody tr td > div.empty {
@@ -150,7 +150,7 @@ h2.title { color: #fff; }
 #navigation .navigation_offset {
 	height: 60px;
 	/*background: #A3D900;*/
-        background: #9BC960;
+        background: #000000;
 }
 #navigation ul {
 	margin-bottom: 0;	
@@ -169,7 +169,7 @@ h2.title { color: #fff; }
 	line-height: 60px;	
 }
 #navigation ul > li a:hover {
-	background: #6C9100;
+	background: #0F0F0F;
 	color: 	#fff;
 }
 #navigation ul > li.active a {
@@ -186,12 +186,12 @@ h2.title { color: #fff; }
 #content .sidebar {
 	background: #333;
 	padding: 0 15px 15px 15px;
-	border-bottom: 10px solid #9BC960; /*#A3D900;*/
+	border-bottom: 10px solid #B8C3A8; /*#A3D900;*/
 }
 #content .sidebar h3 {
 	height: 60px;
 	line-height: 60px;
-	border-bottom: 1px solid #9BC960; /*#A3D900;*/
+	border-bottom: 1px solid #B8C3A8; /*#A3D900;*/
 	color: #fff;
 	font-weight: 300;
 	margin: 0 -15px;
@@ -213,7 +213,7 @@ h2.title { color: #fff; }
 	color: #fff;
 }
 #content .sidebar ul li a:hover {
-	color: #9BC960; /*#A3D900;*/
+	color: #B8C3A8; /*#A3D900;*/
 }
 
 
@@ -267,9 +267,9 @@ h2.title { color: #fff; }
 .minicursos_selected  ul > li {
 	font-size: 12px;
 	padding: 10px;
-	background: #9BC960; /*#A3D900;*/
+	background: #B8C3A8; /*#A3D900;*/
 	color: #333;
-	border: 5px solid #9BC960; /* #A3D900;*/
+	border: 5px solid #B8C3A8; /* #A3D900;*/
 	border-bottom: 1px dotted #fff;
 	border-top: 0;
 }
@@ -297,8 +297,8 @@ h2.title { color: #fff; }
 
 
 #footer {
-	border-top: 10px solid #9BC960; /*#A3D900;*/
-	background: #333;
+	border-top: 10px solid #B8C3A8; /*#A3D900;*/
+	background: #000;
 	margin-top: 0px;/*atenção*/
 }
 #footer .logo {
@@ -321,7 +321,7 @@ h2.title { color: #fff; }
 #footer .block ul { list-style: none; margin: 10px 0 0 0; padding: 0; }
 #footer ul li { color: #fff; font-size: 13px; }
 #footer ul li > strong { /*color: #A3D900; */
-                        color: #9BC960; 
+                        color: #B8C3A8; 
                           margin-right: 10px; }
 
 .CSSTableGenerator {
@@ -372,7 +372,7 @@ h2.title { color: #fff; }
 }.CSSTableGenerator tr:hover td{
 	
 }
-.CSSTableGenerator tr:nth-child(odd){ background-color:#9bc960; }
+.CSSTableGenerator tr:nth-child(odd){ background-color:#B8C3A8; }
 .CSSTableGenerator tr:nth-child(even)    { background-color:#ffffff; }.CSSTableGenerator td{
 	vertical-align:middle;
 	
@@ -393,7 +393,7 @@ h2.title { color: #fff; }
 	border-width:0px 0px 0px 0px;
 }
 .CSSTableGenerator tr:first-child td{
-		background:-o-linear-gradient(bottom, #ffffff 5%, #3f7f00 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #3f7f00) );
+		background:-o-linear-gradient(bottom, #ffffff 5%, #3f7f00 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #8B9B76) );
 	background:-moz-linear-gradient( center top, #ffffff 5%, #3f7f00 100% );
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff", endColorstr="#3f7f00");	background: -o-linear-gradient(top,#ffffff,3f7f00);
 
